Closed Bug 1502462 Opened 7 years ago Closed 7 years ago

IPv6 Address HTTP to HTTPS redirect

Categories

(Core :: Networking, defect, P2)

63 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: ilham92_sakura, Assigned: dragana, NeedInfo)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(4 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:63.0) Gecko/20100101 Firefox/63.0 Steps to reproduce: With A IPv6 enabled network Visit this address (HTTP): http://[2606:4700:4700::1111] Actual results: Firefox crash when try to redirect HTTP to HTTPS under IPv6 Address Expected results: A smooth transition HTTP to HTTPS via IPv6 Address. Other browser works fine, like Microsoft Edge
I understand, open IPv6 HTTPS will solve, but... HTTP to HTTPS will crash enter [2606:4700:4700::1111] into address, Firefox will open HTTP first, once found, Firefox load, then server ask to redirect to HTTPS, then Firefox crash instantly. I test my own LAMP server, redirect HTTP traffic to HTTPS via IPv6 address, and it crash. It mean, IPv6 HTTP to HTTPS redirect inside Firefox will crash instantly. Firefox need fix this, most admin are lazy adding HTTPS into address, slapping IPv6 address into address bar and hoping Firefox will open normally.
Please follow the steps on http://support.mozilla.com/kb/Firefox%20crashes and report the crash ID here. Thanks!
Flags: needinfo?(ilham92_sakura)
Attached image IPv6 ISP.PNG
ISP Native IPv6
Flags: needinfo?(ilham92_sakura)
IPv6 Auto Configuration
Attached file firefox_crash.json
and this crash id: https://crash-stats.mozilla.com/report/index/79b3d8c6-d1f2-47c1-a644-404510181028 One little test I do, delay IPv6 HTTP to HTTPS, allow firefox to record last working website, once user load (embedded) crafted page, user will be crash-loop, fun bug to play around.
1. i can reproduce this crash on Surface Book 2, Windows 10, FF63.0 using: http://[2606:4700:4700::1111] 2. https://[2606:4700:4700::1111] does not crash
Status: UNCONFIRMED → NEW
Ever confirmed: true
Based on comment 8, triaging this bug out of Untriaged.
Component: Untriaged → Networking
Product: Firefox → Core
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [necko-triaged]
Priority: P1 → P2
AltSvcMapping::ProcessHeader should use GetAsciiHost instead of GetHost.
Keywords: checkin-needed
Pushed by dluca@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/eff4ffb1d280 The altSrv checker does not build a uri correctly if origin is ipv6 address. r=valentin
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Flags: qe-verify+

Unfortunately, the company I work for doesn't have the IPv6 implemented, and due to this fact I cannot reproduce this bug.

Hi, ilham92_sakura! Could you please do us a favor by helping to verify this bug on 65 RC [1], does this build fix the problem for you? Thank you!

[1] https://archive.mozilla.org/pub/firefox/candidates/65.0-candidates/build1/

Flags: needinfo?(ilham92_sakura)

I'm going to remove the qe+ flag given the above. I'm afraid there's nothing more we can do here, for the SV folks.

Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: