Bug 1502462 - The altSrv checker does not build a uri correctly if origin is ipv6 address. r=valentin

AltSvcMapping::ProcessHeader should use GetAsciiHost instead of GetHost.

Differential Revision: https://phabricator.services.mozilla.com/D13066